bug 290081: Use the _moz-rs-heading attribute when opening residual style tags that aren't direct descendents of the heading tag open on the tag stack. r=bzbarsky sr=rbs a=asa